Closed Bug 1810797 Opened 2 years ago Closed 2 years ago

Download panels stay displayed after browser window is minimized

Categories

(Core :: Widget: Gtk, defect, P2)

x86_64
Linux
defect

Tracking

()

VERIFIED FIXED
111 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox109 --- unaffected
firefox110 + verified
firefox111 --- verified

People

(Reporter: gcp, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(3 files)

Kubuntu 22.04, current Nightly, X11 (not Wayland), NVIDIA drivers (This is AFAIK the current default on Kubuntu LTS)

  1. Open a Firefox Window.
  2. Expand the downloads panel.
  3. Minimize

The downloads panel stays visible, obscuring whatever else is on screen now.

This is a recent regression.

Summary: Download panes stays displayed after minimize → Download panes stay displayed after minimize

I tested 109.0.0 release, and that does not suffer from this bug: I cannot click the minimize button while the downloads panel is expanded.

Summary: Download panes stay displayed after minimize → Download panes stay displayed after browser window is minimized

Since the status is marked as affected for nightly and as unaffected for release, is it affected or unaffected for beta?
For more information, please visit auto_nag documentation.

Regressed by: 1798131
See Also: → 1807482
Summary: Download panes stay displayed after browser window is minimized → Download panels stay displayed after browser window is minimized

(In reply to Gian-Carlo Pascutto [:gcp] from comment #0)

  1. Minimize

You're minimizing from the system titlebar? Via keyboard? Something else?

Flags: needinfo?(gpascutto)

You're minimizing from the system titlebar? Via keyboard? Something else?

System titlebar.

Flags: needinfo?(gpascutto)

Set release status flags based on info from the regressing bug 1798131

Priority: -- → P2
Flags: needinfo?(emilio)

I can repro on KDE/X11, only with system titlebar enabled tho.

Assignee: nobody → emilio
Blocks: 1811486
Blocks: 1811487

The main issue here is that we roll up the popup on focus out, and wait
for the transition to finish, but we stop compositing / running the
refresh driver when minimized, and thus the transition never ends up
finishing / the popup doesn't end up being hidden until after you
re-open the window...

This is the easy-to-uplift fix, will work on a proper solution for
central.

Flags: needinfo?(emilio)
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b73afeaeb34a Disable panel animations on KDE/x11 for now. r=stransky

Tracking for a potential uplift in beta.

Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 111 Branch

The main issue here is that we roll up the popup on focus out, and wait
for the transition to finish, but we stop compositing / running the
refresh driver when minimized, and thus the transition never ends up
finishing / the popup doesn't end up being hidden until after you
re-open the window...

This is the easy-to-uplift fix, will work on a proper solution for
central.

Original Revision: https://phabricator.services.mozilla.com/D167379

Comment on attachment 9314001 [details]
Bug 1810797 - Disable panel animations on KDE/x11 for now. r=stransky

Beta/Release Uplift Approval Request

  • User impact if declined: comment 0
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: If they have kde testing comment 0 would be great.
  • List of other uplifts needed: none
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Really low risk fix to disable panel animations on KDE, which can cause issues due to the order of the X server events.
  • String changes made/needed: none
  • Is Android affected?: No
Attachment #9314001 - Flags: approval-mozilla-beta?
Flags: qe-verify+

Comment on attachment 9314001 [details]
Bug 1810797 - Disable panel animations on KDE/x11 for now. r=stransky

Will try to do it the phab way.

Attachment #9314001 - Flags: approval-mozilla-beta?

Comment on attachment 9314001 [details]
Bug 1810797 - Disable panel animations on KDE/x11 for now. r=stransky

Ok that didn't quite work out.

Attachment #9314001 - Flags: approval-mozilla-beta?
Attachment #9314001 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
QA Whiteboard: [qa-triaged]

I reproduced the initial issue using an affected Nightly build from 2023-01-23 on a Kubuntu 22.04 VM,
It seems that using latest Nightly this is not totally fixed, there is a small shadow of the panel left for 1-2 seconds and then it disappears. I downloaded a few builds and ended up with a regression for this: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=2ac913a38e4cd0c49ceabd0bbd21dd862908f3fb&tochange=45cd9ed42ad7f9e8f3b477c99142ec710aa43a09

From a quick look it looks that Bug 1811486 could have caused this.

The good thing is that the latest Beta 110.0b6 is not affected yet and the panel correctly closes when Firefox is minimized.

Flags: needinfo?(emilio)

Can you file a separate bug for that? Thanks!

Flags: needinfo?(emilio)

(In reply to Emilio Cobos Álvarez (:emilio) from comment #17)

Can you file a separate bug for that? Thanks!

I logged bug 1813070 and added a needinfo request for you there so you can track it. In the meantime I'm going to close this one as verified fixed since the panel is now minimized.

Status: RESOLVED → VERIFIED
QA Whiteboard: [qa-triaged]
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: