Bug 1810797 - Disable panel animations on KDE/x11 for now. r=stransky

The main issue here is that we roll up the popup on focus out, and wait
for the transition to finish, but we stop compositing / running the
refresh driver when minimized, and thus the transition never ends up
finishing / the popup doesn't end up being hidden until after you
re-open the window...

This is the easy-to-uplift fix, will work on a proper solution for
central.

Differential Revision: https://phabricator.services.mozilla.com/D167379